--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,11 @@
 version: 0.2
 phases:
   install:
-    runtime-versions:
-      java: openjdk17
+    commands:
+      - echo "Installing OpenJDK 17..."
+      - apt-get update
+      - apt-get install -y openjdk-17-jdk
+
   build:
     commands:
       - mvn clean package
